--- a/timetable.html
+++ b/timetable.html
@@ -46,10 +46,8 @@
 			<br>
 			<br>
 			<p>How many Weeks in your timetable?</p>
-			<!-- <button type="button" id="1week" name="weeks" value="1" class = "timetableBtn" onclick="activateButton('weeks', 1)">1</button> -->
 			<button type="button" id="1week" name="weeks" value="1" class="timetableBtn">1</button>
 			<button type="button" id="2week" name="weeks" value="2" class="timetableBtn active">2</button>
-			<!-- <button type="button" id="2week" name="weeks" value="2" class="timetableBtn active" onclick="activateButton('weeks', 2)">2</button> -->
 			<br>
 			<br>
 			<p>How many Periods in a Day?</p>
@@ -75,76 +73,76 @@
 			<button type="button" id="2breaks" name="breaks" value="2" class="timetableBtn">2</button>
 			<br>
 			<br>
-			<p>When is the First?</p>
-			<button type="button" id="1break1to2" name="break1" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="1break2to3" name="break1" value="2" class="timetableBtn active">Between P2 & P3</button>
-			<button type="button" id="1break3to4" name="break1" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="1break4to5" name="break1" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="1break5to6" name="break1" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="1break6to7" name="break1" value="6" class="timetableBtn">Between P6 & P7</button>						
-			<button type="button" id="1break7to8" name="break1" value="7" class="timetableBtn">Between P7 & P8</button>						
-			<br>
-			<br>
-			<p>When is the Second?</p>
-			<button type="button" id="2break1to2" name="break2" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="2break2to3" name="break2" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="2break3to4" name="break2" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="2break4to5" name="break2" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="2break5to6" name="break2" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="2break6to7" name="break2" value="6" class="timetableBtn active">Between P6 & P7</button>						
-			<button type="button" id="2break7to8" name="break2" value="7" class="timetableBtn">Between P7 & P8</button>						
-            <br>
-            <br>
+			<p class="break1 hide">When is the First?</p>
+			<button type="button" id="1break1to2" name="break1" value="1" class="timetableBtn break1 hide">Between P1 & P2</button>
+			<button type="button" id="1break2to3" name="break1" value="2" class="timetableBtn active break1 hide">Between P2 & P3</button>
+			<button type="button" id="1break3to4" name="break1" value="3" class="timetableBtn break1 hide">Between P3 & P4</button>
+			<button type="button" id="1break4to5" name="break1" value="4" class="timetableBtn break1 hide">Between P4 & P5</button>
+			<button type="button" id="1break5to6" name="break1" value="5" class="timetableBtn break1 hide">Between P5 & P6</button>
+			<button type="button" id="1break6to7" name="break1" value="6" class="timetableBtn break1 hide">Between P6 & P7</button>						
+			<button type="button" id="1break7to8" name="break1" value="7" class="timetableBtn break1 hide">Between P7 & P8</button>						
+			<br class = "break1 hide">
+			<br class = "break1 hide">
+			<p class = "break2 hide">When is the Second?</p>
+			<button type="button" id="2break1to2" name="break2" value="1" class="timetableBtn break2 hide">Between P1 & P2</button>
+			<button type="button" id="2break2to3" name="break2" value="2" class="timetableBtn break2 hide">Between P2 & P3</button>
+			<button type="button" id="2break3to4" name="break2" value="3" class="timetableBtn break2 hide">Between P3 & P4</button>
+			<button type="button" id="2break4to5" name="break2" value="4" class="timetableBtn break2 hide">Between P4 & P5</button>
+			<button type="button" id="2break5to6" name="break2" value="5" class="timetableBtn break2 hide">Between P5 & P6</button>
+			<button type="button" id="2break6to7" name="break2" value="6" class="timetableBtn active break2 hide">Between P6 & P7</button>						
+			<button type="button" id="2break7to8" name="break2" value="7" class="timetableBtn break2 hide">Between P7 & P8</button>						
+            <br class = "break2 hide">
+            <br class = "break2 hide">
 			<p>How many Registration Periods in a Day?</p>
 			<button type="button" id="0periods" name="regPeriods" value="0" class="timetableBtn">0</button>
 			<button type="button" id="1periods" name="regPeriods" value="1" class="timetableBtn active">1</button>
 			<button type="button" id="2periods" name="regPeriods" value="2" class="timetableBtn">2</button>
 			<br>
 			<br>
-			<p>When is the First?</p>
-			<button type="button" id="1regBefore1" name="regPeriods1" value="0" class="timetableBtn active">Before P1</button>
-			<button type="button" id="1reg1to2" name="regPeriods1" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="1reg2to3" name="regPeriods1" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="1reg3to4" name="regPeriods1" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="1reg4to5" name="regPeriods1" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="1reg5to6" name="regPeriods1" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="1reg6to7" name="regPeriods1" value="6" class="timetableBtn">Between P6 & P7</button>						
-			<button type="button" id="1reg7to8" name="regPeriods1" value="7" class="timetableBtn">Between P7 & P8</button>						
-			<button type="button" id="1regAfterLast" name="regPeriods1" value="Last" class="timetableBtn">After Last Period</button>	
-			<br>
-			<br>
-			<p>Before or after Break?</p>
-			<button type="button" id="1regBeforeBreak" name="regBreak1" value="1regBeforeBreak" class="timetableBtn">Before</button>
-			<button type="button" id="1regAfterBreak" name="regBreak1" value="1regAfterBreak" class="timetableBtn active">After</button>
-			<br>
-			<br>
-			<p>Before or after Lunch?</p>
-			<button type="button" id="1regBeforeLunch" name="regLunch1" value="1regBeforeLunch" class="timetableBtn">Before</button>
-			<button type="button" id="1regAfterLunch" name="regLunch1" value="1regAfterLunch" class="timetableBtn active">After</button>
-			<br>
-			<br>
-			<p>When is the Second?</p>
-			<button type="button" id="2regBefore1" name="regPeriods2" value="0" class="timetableBtn">Before P1</button>
-			<button type="button" id="2reg1to2" name="regPeriods2" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="2reg2to3" name="regPeriods2" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="2reg3to4" name="regPeriods2" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="2reg4to5" name="regPeriods2" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="2reg5to6" name="regPeriods2" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn active">Between P6 & P7</button>						
-			<button type="button" id="2reg7to8" name="regPeriods2" value="7" class="timetableBtn">Between P7 & P8</button>						
-			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn">After Last Period</button>	
-			<br>
-			<br>
-			<p>Before or after Break?</p>
-			<button type="button" id="2regBeforeBreak" name="regBreak2" value="2regBeforeBreak" class="timetableBtn">Before</button>
-			<button type="button" id="2regAfterBreak" name="regBreak2" value="2regAfterBreak" class="timetableBtn active">After</button>
-			<br>
-			<br>
-			<p>Before or after Lunch?</p>
+			<p class = "regPeriods1 hide">When is the First?</p>
+			<button type="button" id="1regBefore1" name="regPeriods1" value="0" class="timetableBtn active regPeriods1 hide">Before P1</button>
+			<button type="button" id="1reg1to2" name="regPeriods1" value="1" class="timetableBtn regPeriods1 hide">Between P1 & P2</button>
+			<button type="button" id="1reg2to3" name="regPeriods1" value="2" class="timetableBtn regPeriods1 hide">Between P2 & P3</button>
+			<button type="button" id="1reg3to4" name="regPeriods1" value="3" class="timetableBtn regPeriods1 hide">Between P3 & P4</button>
+			<button type="button" id="1reg4to5" name="regPeriods1" value="4" class="timetableBtn regPeriods1 hide">Between P4 & P5</button>
+			<button type="button" id="1reg5to6" name="regPeriods1" value="5" class="timetableBtn regPeriods1 hide">Between P5 & P6</button>
+			<button type="button" id="1reg6to7" name="regPeriods1" value="6" class="timetableBtn regPeriods1 hide">Between P6 & P7</button>						
+			<button type="button" id="1reg7to8" name="regPeriods1" value="7" class="timetableBtn regPeriods1 hide">Between P7 & P8</button>						
+			<button type="button" id="1regAfterLast" name="regPeriods1" value="Last" class="timetableBtn regPeriods1 hide">After Last Period</button>	
+			<br class = "regPeriods1 hide">
+			<br class = "regPeriods1 hide">
+			<p class = "regBreak1 hide">Before or after Break?</p>
+			<button type="button" id="1regBeforeBreak" name="regBreak1" value="1regBeforeBreak" class="timetableBtn regBreak1 hide">Before</button>
+			<button type="button" id="1regAfterBreak" name="regBreak1" value="1regAfterBreak" class="timetableBtn active regBreak1 hide">After</button>
+			<br class = "regBreak1 hide">
+			<br class = "regBreak1 hide">
+			<p class = "regLunch1 hide">Before or after Lunch?</p>
+			<button type="button" id="1regBeforeLunch" name="regLunch1" value="1regBeforeLunch" class="timetableBtn regLunch1 hide">Before</button>
+			<button type="button" id="1regAfterLunch" name="regLunch1" value="1regAfterLunch" class="timetableBtn active regLunch1 hide">After</button>
+			<br class = "regLunch1 hide">
+			<br class = "regLunch1 hide">
+			<p class = "regPeriods2 hide">When is the Second?</p>
+			<button type="button" id="2regBefore1" name="regPeriods2" value="0" class="timetableBtn regPeriods2 hide">Before P1</button>
+			<button type="button" id="2reg1to2" name="regPeriods2" value="1" class="timetableBtn regPeriods2 hide">Between P1 & P2</button>
+			<button type="button" id="2reg2to3" name="regPeriods2" value="2" class="timetableBtn regPeriods2 hide">Between P2 & P3</button>
+			<button type="button" id="2reg3to4" name="regPeriods2" value="3" class="timetableBtn regPeriods2 hide">Between P3 & P4</button>
+			<button type="button" id="2reg4to5" name="regPeriods2" value="4" class="timetableBtn regPeriods2 hide">Between P4 & P5</button>
+			<button type="button" id="2reg5to6" name="regPeriods2" value="5" class="timetableBtn regPeriods2 hide">Between P5 & P6</button>
+			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn active regPeriods2 hide">Between P6 & P7</button>						
+			<button type="button" id="2reg7to8" name="regPeriods2" value="7" class="timetableBtn regPeriods2 hide">Between P7 & P8</button>						
+			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn regPeriods2 hide">After Last Period</button>	
+			<br class = "regPeriods2 hide">
+			<br class = "regPeriods2 hide">
+			<p class = "regBreak2 hide">Before or after Break?</p>
+			<button type="button" id="2regBeforeBreak" name="regBreak2" value="2regBeforeBreak" class="timetableBtn regBreak2 hide">Before</button>
+			<button type="button" id="2regAfterBreak" name="regBreak2" value="2regAfterBreak" class="timetableBtn active regBreak2 hide">After</button>
+			<br class = "regBreak2 hide">
+			<br class = "regBreak2 hide">
+			<p class = "regLunch2 hide">Before or after Lunch?</p>
 			<button type="button" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" class="timetableBtn">Before</button>
 			<button type="button" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" class="timetableBtn active">After</button>
-			<br>
-			<br>
+			<br class = "regLunch2 hide">
+			<br class = "regLunch2 hide">
 			<p>Check your Timetable:</p>
 			<br>
 			<table id="templateTimetable" ></table>
